applications/object-storage-monitor/latest/manifests/monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: object-storage-monitor
  name: object-storage-monitor-deployment
  namespace: objectstorage-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-storage-monitor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: object-storage-monitor
    spec:
      containers:
      - args:
        - /config/config.yml
        command:
        - /manager
        image: docker.io/nowinkey/sealos-database-service:v1.0.2
        imagePullPolicy: Always
        name: object-storage-monitor
        ports:
        - containerPort: 9090
          protocol: TCP
        resources:
          requests:
            cpu: 1m
            memory: 500M
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: config-vol
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - configMap:
          defaultMode: 420
          name: object-storage-monitor-config
        name: config-vol
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: object-storage-monitor
  name: object-storage-monitor
  namespace: objectstorage-system
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: object-storage-monitor
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: object-storage-monitor
  namespace: objectstorage-system
  labels:
    cloud.sealos.io/app-deploy-manager-domain: object-storage-monitor
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if (\$request_uri ~* \.(js|css|gif|jpe?g|png)) {
        expires 30d;
        add_header Cache-Control "public";
      }
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 64k;
      large_client_header_buffers 4 128k;
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - object-storage-monitor.dev.sealos.top
      secretName: wildcard-cert
  rules:
    - host: object-storage-monitor.dev.sealos.top
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: object-storage-monitor
                port:
                  number: 9090
